# PyOnda

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  cy.yaml
examples/: generate_data.py  read_generated_data.jl
src/pyonda/: load.py  load_arrow.py  load_lpcm.py  save_arrow.py  save_lpcm.py  utils.py
src/pyonda/utils/: compression.py  decompression.py  processing.py  s3_download.py  s3_upload.py  schemas.py
tests/: conftest.py  fixtures.py  test_decompression.py  test_load.py  test_load_arrow.py  test_load_from_s3.py  test_load_lpcm.py  test_load_lpcm_zst.py  test_save_arrow.py  test_save_lpcm.py  test_utils.py  test_uuid_read.py  utils.py
tests/data/: 176ecfcf-d4c7-49ba-adec-f338d0a0c01f_ecg.lpcm  176ecfcf-d4c7-49ba-adec-f338d0a0c01f_ecg.lpcm.zst  176ecfcf-d4c7-49ba-adec-f338d0a0c01f_ecg.npy  176ecfcf-d4c7-49ba-adec-f338d0a0c01f_eeg.lpcm  176ecfcf-d4c7-49ba-adec-f338d0a0c01f_eeg.npy  README.md  test.onda.signal.arrow  test.onda.signal_processed.csv  testttt.csv  uuid4.arrow  uuid45.arrow  uuid5.arrow
tests/utils/: test_compression.py  test_decompression.py  test_processing.py  test_s3_download.py  test_s3_upload.py  test_schemas.py
