[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyonda"
version = "0.2.0"
description = 'Python tools to handle Onda formatted data'
readme = "README.md"
requires-python = ">=3.8, <3.10"
authors = [
  { name = "Mkrtich Vatinyan", email = "mkrtich.vatinyan@beacon.bio" },
]

dependencies = [
  "boto3==1.28.19",
  "pyarrow==12.0.1",
  "pandas==2.0.3",
  "numpy==1.24.4",
  "zstandard==0.21.0"
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "moto==4.1.15"
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
