[tool.poetry]
name = "pyonda"
version = "0.3.1"
description = "Python tools to handle Onda formatted data"
authors = ["Mkrtich Vatinyan <mkrtich.vatinyan@beacon.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
boto3 = "~1.28.19"
pyarrow = "~12.0.1"
pandas = "~2.0.3"
numpy = "~1.24.4"
zstandard = "~0.21.0"
black = "^23.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
coverage = "~7.3.2"
moto = "~4.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
